--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </style>
   <script type="text/javascript" src="js/phaser.min.js"></script>
   <script type="text/javascript" src="js/game.js"></script>
+  <script src="//cdn.peerjs.com/0.3/peer.min.js"></script>
 </head>
 <body>
 </body>
