--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <script type="text/javascript" src="js/phaser.min.js"></script>
   <script type="text/javascript" src="js/game.js"></script>
   <script src="//cdn.peerjs.com/0.3/peer.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js"></script>
+
 </head>
 <body>
 </body>
